# PasswordManager

./: .gitignore  CMakeLists.txt  README.md
data/: passwords.db
src/: CryptoManager.cpp  DatabaseManager.cpp  DatabaseManager.h  main.cpp
src/CryptoManager/: CryptoManager.cpp  CryptoManager.h
src/DatabaseManager/: DatabaseManager.cpp  DatabaseManager.h
src/PasswordManager/: PasswordManager.cpp  PasswordManager.h
src/UI/: AddPasswordDialog.cpp  AddPasswordDialog.h  MainWindow.cpp  MainWindow.h
